@@ -25,7 +25,7 @@
 
 PRGNAM=squidGuard			
 VERSION=${VERSION:-1.4}	 
-BUILD=${BUILD:-5}
+BUILD=${BUILD:-6}
 TAG=${TAG:-_microlinux}		
 
 NUMJOBS=${NUMJOBS:--j5}
@@ -59,7 +59,7 @@ else
   LIBDIRSUFFIX=""
 fi
 
-set -e # Exit on most errors
+set -e 
 
 wget -c http://www.squidguard.org/Downloads/$PRGNAM-$VERSION.tar.gz
 
@@ -113,7 +113,7 @@ chmod 0700 $PKG/usr/local/sbin/blacklist.sh
 
 mkdir -p $PKG/etc/squidguard
 cat samples/sample.conf > $PKG/etc/squidguard/squidguard.conf.sample
-cat $CWD/squidguard.conf > $PKG/etc/squidguard/squidguard.conf
+cat $CWD/squidguard.conf > $PKG/etc/squidguard/squidguard.conf.new
 chmod 0644 $PKG/etc/squidguard/squidguard.conf*
 
 mkdir -p $PKG/var/lib/squidguard
@@ -129,6 +129,7 @@ cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
 
 mkdir -p $PKG/install
 cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
 
 cd $PKG
 /sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
